pulldown-cmark-mdcat/tests/snapshots/render/dumb@commonmark-spec__217-link_reference_definitions.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 157
expression: "replace_system_specific_urls(render_to_string(markdown_file, &dumb_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/217-link_reference_definitions.md
---
foo[1], bar[2], baz[3]

[1]: /foo-url foo
[2]: /bar-url bar
[3]: /baz-url
